--- a/src/_assets/firestarter/css/common/_material-design.scss
+++ b/src/_assets/firestarter/css/common/_material-design.scss
@@ -16,7 +16,6 @@
     @include transition( all, 1s, $easeOutExpo );
 
     opacity: 0;
-    padding: 0 15px;
     position: relative;
     top: 150px;
 
